--- a/demo.css
+++ b/demo.css
@@ -14,6 +14,12 @@ a.sourcelink {
     padding-left: 20px;
 }
 
+a.toggle {
+    display:block;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 table.strings {
     border-collapse: collapse;
 }
@@ -42,6 +48,15 @@ div.display-area {
     margin-bottom: 10px;
     margin-left: 0px;
     outline: 1px solid lightgrey;
+}
+
+div.statistics {
+    display:inline-block;
+    float: right;
+}
+
+div.buttons {
+    display:inline-block;
 }
 
 td.statlabel {
@@ -73,7 +88,11 @@ div.buttons {
 }
 
 div#plotArea {
-    padding-top: 30px;
+    padding-top: 15px;
+}
+
+div.comparisonsplot {
+    margin-top: -50px;
 }
 
 #range-slider {
