--- a/demo.css
+++ b/demo.css
@@ -50,11 +50,6 @@ div.display-area {
     outline: 1px solid lightgrey;
 }
 
-div.statistics {
-    display:inline-block;
-    float: right;
-}
-
 div.buttons {
     display:inline-block;
 }
@@ -76,11 +71,11 @@ button.btn {
     margin: 5px;
 }
 
-div.statistics {
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 20px;
+table.statstable {
+    display:inline-block;
+    padding: 15px 0px 10px 0px;
 }
+
 
 div.buttons {
     display: inline-block;
